--- a/UIAutoGyn/src/app/Components/listagem-sem-categoria/listagem-sem-categoria.component.css
+++ b/UIAutoGyn/src/app/Components/listagem-sem-categoria/listagem-sem-categoria.component.css
@@ -69,3 +69,9 @@ p{
     width: 100%;
     background-color: var(--borda);
 }
+
+.juntos{
+    display: flex;
+    gap: 10px;
+    align-self: flex-end;
+}
