--- a/UIAutoGyn/src/app/Layouts/base/base.component.html
+++ b/UIAutoGyn/src/app/Layouts/base/base.component.html
@@ -20,6 +20,7 @@
             <a routerLink="/estoque" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><img src="estoque.svg" alt="" width="20">Estoque</a>
         </nav>
     </aside>
+    <div></div>
 
     <section>
         <ng-content></ng-content>
