--- a/UIAutoGyn/src/app/Views/clientes/clientes.component.html
+++ b/UIAutoGyn/src/app/Views/clientes/clientes.component.html
@@ -20,7 +20,7 @@
                     </ng-container>
                     <ng-container *ngIf="addCliente.isPJ">
                         <InputsComponent text="Cnpj" tipoInput="number" idInput="cnpj" placeholder="00.000.000/0001-00" [(ngModel)]="addCliente.cnpj"/>
-                        <InputsComponent text="Inscrição estadual" tipoInput="number" idInput="inscricao" placeholder="123456789101" [(ngModel)]="addCliente.inscricaoEstadual"/>
+                        <InputsComponent text="Inscrição estadual" tipoInput="number" idInput="inscricao" placeholder="123456789101" [(ngModel)]="addCliente.inscricao_estadual"/>
                         <InputsComponent text="Nome do contato" tipoInput="text" idInput="nomeContato" placeholder="Responsável" [(ngModel)]="addCliente.nomeContato"/>
                     </ng-container>
                 </div>
